--- a/spring_thymeleaf_demo/src/main/resources/application.yml
+++ b/spring_thymeleaf_demo/src/main/resources/application.yml
@@ -2,3 +2,46 @@ server:
   port: 8080
 spring:  application:    name: test-thymeleaf
   thymeleaf:    cache: false
+  datasource:
+        name: test
+        url: jdbc:mysql://127.0.0.1:3306/mybatisdemo?serverTimezone=UTC
+        username: orypeu
+        password: orypeu
+        # 使用druid数据源
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        # 连接池配置
+        druid:
+          # 最小数
+          min-idle: 5
+          # 最大数
+          max-active: 20
+          # 初始大小
+          initial-size: 5
+          # 配置获取连接等待超时时间
+          max-wait: 6000
+          # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+          time-between-eviction-runs-millis: 60000
+          # 配置一个连接在池中最小生存时间  单位为毫秒
+          min-evictable-idle-time-millis: 300000
+          validation-query: SELECT 1 FROM DUAL
+          test-while-idle: true
+          test-on-borrow: false
+          test-on-return: false
+          # 打开 PSCache，并且指定每个连接上PSCache的大小
+          pool-prepared-statements: true
+          max-pool-prepared-statement-per-connection-size: 20
+          # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，wall用于防火墙
+          filters: stat,wall
+
+## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
+mybatis:
+  mapper-locations: classpath:mapping/*Mapper.xml  #注意：一定要对应mapper映射xml文件的所在路径
+  type-aliases-package: com.example.model  # 注意：对应实体类的路径
+
+#pagehelper分页插件
+pagehelper:
+    helperDialect: mysql
+    reasonable: true
+    supportMethodsArguments: true
+    params: count=countSql
